--- a/esp8266-controller-backend-with-comments/Dockerfile
+++ b/esp8266-controller-backend-with-comments/Dockerfile
@@ -14,4 +14,5 @@ RUN ./mvnw clean package -DskipTests
 EXPOSE 8080
 
 # Run the JAR file
-CMD ["java", "-jar", "target/*.jar"]
+CMD ["java", "-jar", "target/esp8266-controller-0.0.1-SNAPSHOT.jar"]
+
